[package]
name = "substrate-crypto-light"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b_simd = {version = "1.0.2", default-features = false}
hmac = "0.12.1"
k256 = {version = "0.13.3", default-features = false, features = ["alloc", "ecdsa"], optional = true}
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
parity-scale-codec = {version = "3.6.9", default-features = false}
pbkdf2 = {version = "0.12.2", default-features = false}
rand_core = {version = "0.6.4", default-features = false, optional = true}
regex = {version = "1.10.3", default-features = false}
schnorrkel = {version = "0.11.4", default-features = false, optional = true}
sha2 = {version = "0.10.6", default-features = false}
zeroize = "1.5.7"

[dev-dependencies]
mnemonic-external = {git = "https://github.com/Alzymologist/mnemonic-external"}
sp-core = {version = "30.0.0"}

[features]
default = ["ecdsa", "sr25519", "std"]
ecdsa = ["k256"]
sr25519 = ["rand_core", "schnorrkel"]
std = []
