[package]
name = "substrate-crypto-light"
description = "Cryptographic code for Substrate chains in pure rust with better baremetal support"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = [
    "Alexander Slesarev <slesarew@gmail.com>",
    "Vera Abramova <abramova.vera@gmail.com>",
]
repository = "https://github.com/Alzymologist/substrate-crypto-light"
homepage = "https://github.com/Alzymologist/substrate-crypto-light"
documentation = "https://docs.rs/substrate-crypto-light"
keywords = ["no_std", "crypto", "substrate", "polkadot"]
edition = "2021"
exclude = ["/for_tests", "/.github"]

[dependencies]
base58 = {version = "0.2.0"}
blake2b_simd = {version = "1.0.2", default-features = false}
ed25519-zebra = {version = "4.0.3", default-features = false, optional = true}
hmac = "0.12.1"
k256 = {version = "0.13.3", default-features = false, features = ["alloc", "ecdsa"], optional = true}
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"]}
parity-scale-codec = {version = "3.6.9", default-features = false, features = ["derive"]}
pbkdf2 = {version = "0.12.2", default-features = false}
rand_core = {version = "0.6.4", default-features = false, optional = true}
regex = {version = "1.10.3", default-features = false}
schnorrkel = {version = "0.11.4", default-features = false, optional = true}
sha2 = {version = "0.10.8", default-features = false}
zeroize = {version = "1.7.0", features = ["derive"]}

[dev-dependencies]
hex = "0.4.3"
mnemonic-external = "0.1.0"
sp-core = "35.0.0"

[features]
default = ["ed25519", "ecdsa", "sr25519", "std"]
ecdsa = ["k256"]
ed25519 = ["ed25519-zebra"]
sr25519 = ["rand_core", "schnorrkel"]
std = ["schnorrkel/std"]
